--- a/music-visualizer/src/app/pages/login-page.component.css
+++ b/music-visualizer/src/app/pages/login-page.component.css
@@ -8,10 +8,15 @@
     background: transparent;
 }
 
-.background-out {
+html, body {
     margin: auto;
-    width: auto;
     height: 100%;
+    background-color: teal;
+}
+
+.background-out {
+    margin: 0;
+    height: 100vh;
     background-color: teal;
 }
 
@@ -37,13 +42,16 @@
 }
 
 
+.email, .pwd {
+    margin-bottom: 40px;
+}
+
 input {
     font-family: "Arial, Helvetica, sans-serif";
     font-size: larger;
     border: 0;
     outline: 0;
     border-bottom: 2px solid rgb(48, 48, 48);
-    margin-bottom: 30px;
     width: 100%;
     text-align: center;
 }
