--- a/music-visualizer/src/app/pages/Login-Page/login-page.component.css
+++ b/music-visualizer/src/app/pages/Login-Page/login-page.component.css
@@ -1,3 +1,6 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+/*Reset elements, gets rid of css whitespace from html head*/
 * {
     margin: 0;
     padding: 0;
@@ -8,44 +11,54 @@
     background: transparent;
 }
 
+/*Set the initial size of parent elements to retain
+ *size of document for other elements
+ */
 html, body {
     margin: auto;
     height: 100%;
     background-color: teal;
 }
 
-.background-out {
+/*Set the background color*/
+#background-out {
     margin: 0;
     height: 100vh;
     background-color: teal;
 }
 
-.background-tile {
+/*Set the color of the tile the login form is in*/
+#background-tile {
     margin: auto;
     width: 40%;
     height: 100vh;
     background-color: white;
 }
 
-.login {
+/*title on page*/
+#login {
     text-align: center;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 60px;
-    margin: 100px 0px
+    margin-bottom: 20%;
 }
 
-.form {
+/*center the form without centering the text*/
+#form {
     font-family: "Arial, Helvetica, sans-serif";
     font-size: large;
     margin: auto;
     width: 50%;
 }
 
-
-.email, .pwd {
-    margin-bottom: 40px;
+/*add a little whitespace between forms*/
+#email, #pwd {
+    margin-bottom: 15%;
 }
 
+mat-label {
+    margin-bottom: 2%;
+}
+
+/*Set form input to be a black line*/
 input {
     font-family: "Arial, Helvetica, sans-serif";
     font-size: larger;
@@ -56,34 +69,28 @@ input {
     text-align: center;
 }
 
-.forgot-password {
+/*Align forgot password link to right and add trailing whitespace*/
+#forgot-password {
     text-align: right;
+    margin-top: 3%;
     margin-bottom: 10%;
 }
 
+/*Set button position and size and text size*/
 button {
-    text-align: center;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: larger;
     color:white;
-    background-color:rgb(96, 180, 207);
     
-    margin: 10px -70px;
+    margin: 10% -70px;
+    margin-bottom: 20%;
     padding: 10px;
     padding-left: 40px;
     padding-right: 40px;
-    border-radius: 23px;
 
     position:relative;
     left:50%;
-    outline: none;
 }
 
-button:hover {
-    background-color:rgb(69, 174, 240);
-}
-
-.register {
+/*Align register link to be centered*/
+#register {
     text-align: center;
-    margin-top: 30%;
 }
