Fixed routing and added Registration page framework

--- a/music-visualizer/src/app/pages/Home-Page/home-page.component.html
+++ b/music-visualizer/src/app/pages/Home-Page/home-page.component.html
@@ -13,9 +13,9 @@
         <H1>Welcome to The Music Visualizer</H1>
       </header>
       <main>
-        <a mat-raised-button color = "primary" routerLink="../../LoginPage"> Login </a>
+        <a mat-raised-button color = "primary" routerLink="../LoginPage"> Login </a>
         <a mat-raised-button color = "primary"> Sign Up </a>
-        <a mat-raised-button color = "primary" routerLink="../../VisualizationPage"> Temp Visualizations Page Button </a>
+        <a mat-raised-button color = "primary" routerLink="../VisualizationPage"> Temp Visualizations Page Button </a>
       </main>
     </body>
 </html>
