Added 404 page for any routes that don't already exist

--- a/music-visualizer/src/app/pages/Login-Page/login-page.component.html
+++ b/music-visualizer/src/app/pages/Login-Page/login-page.component.html
@@ -27,7 +27,7 @@
             <button mat-raised-button color="primary" [disabled]="email.invalid || pwd.invalid" (click)="login()">LOGIN</button>
         </div>
         <div id="register">
-            <p class="mat-body">Don't have a account? <a routerLink="../RegisterPage">Register here.</a></p>
+            <p class="mat-body">Don't have an account? <a routerLink="../RegisterPage">Register here.</a></p>
         </div>
     </div>
 </div>
