Finally fixed css with padding, added gif to 404 page

--- a/music-visualizer/src/app/pages/Not-Found-Page/not-found-page/not-found-page.component.html
+++ b/music-visualizer/src/app/pages/Not-Found-Page/not-found-page/not-found-page.component.html
@@ -1,5 +1,7 @@
 <div id="animated-gif-container">
-    <h1>404</h1>
-    <p>Uh oh. We can't seem to find the page your looking for.</p>
-    <p><a routerLink="../">Click here</a> to head back to the homepage.</p>
+    <div id="back-box">
+        <h1>404</h1>
+        <p>Uh oh. We can't seem to find the page your looking for.</p>
+        <p><a routerLink={{getRoute()}}>Click here</a> to head back to the {{getRouteName()}}.</p>
+    </div>
 </div>
