--- a/music-visualizer/src/app/pages/Login-Page/login-page.component.css
+++ b/music-visualizer/src/app/pages/Login-Page/login-page.component.css
@@ -38,6 +38,7 @@ html, body {
 /*title on page*/
 #login {
     text-align: center;
+    padding-top: 10%;
     margin-bottom: 20%;
 }
 
@@ -51,7 +52,7 @@ html, body {
 
 /*add a little whitespace between forms*/
 #email, #pwd {
-    margin-bottom: 15%;
+    margin-bottom: 11%;
 }
 
 mat-label {
@@ -73,7 +74,6 @@ input {
 #forgot-password {
     text-align: right;
     margin-top: 3%;
-    margin-bottom: 10%;
 }
 
 /*Set button position and size and text size*/
