--- a/music-visualizer/src/app/pages/Not-Found-Page/not-found-page/not-found-page.component.css
+++ b/music-visualizer/src/app/pages/Not-Found-Page/not-found-page/not-found-page.component.css
@@ -1,6 +1,24 @@
-html {
+html, body {
     height: 100vh;
     width: 100vw;
+    margin: 0;
+}
+
+#animated-gif-container { 
+    background-image:url(https://media.giphy.com/media/Q61LJj43H48z1FIK4X/giphy.gif);
+    background-repeat:no-repeat;
+    background-size: 100vw 100vh;
+    height: 100vh;
+    width: 100vw;
+}
+
+#back-box {
+    background-color: white;
+    margin: auto;
+    padding-top: 10%;
+    width: 60%;
+    height: 60%;
+    float: center;
 }
 
 h1 {
@@ -8,8 +26,8 @@ h1 {
     font-weight: bolder;
     font-size: 500px;
     text-align: center;
-    margin-top: 20%;
-    margin-bottom: 10%;
+    padding-top: 10%;
+    padding-bottom: 20%;
 }
 
 p {
