--- a/music-visualizer/src/app/pages/Home-Page/home-page.component.html
+++ b/music-visualizer/src/app/pages/Home-Page/home-page.component.html
@@ -1,21 +1,44 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!DOCTYPE html>
 <html>
-    <body>
-      <header>
-        <H1>Welcome to The Music Visualizer</H1>
-      </header>
-      <main>
-        <a mat-raised-button color = "primary" routerLink="../LoginPage"> Login </a>
-        <a mat-raised-button color = "primary"> Sign Up </a>
-        <a mat-raised-button color = "primary" routerLink="../VisualizationPage"> Temp Visualizations Page Button </a>
-      </main>
-    </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <title>Home - The Music Visualizer</title>
+</head>
+
+<body id="page-top">
+<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+  <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link js-scroll-trigger">About Us</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" routerLink="LoginPage">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<header class="text-center text-white d-flex masthead" style="background-color: midnightblue">
+  <div class="container my-auto">
+    <div class="row">
+      <div class="col-lg-10 mx-auto">
+        <h1 class="text-uppercase"><strong>Welcome to the Music Visualizer</strong></h1>
+        <hr />
+      </div>
+    </div>
+    <div class="col-lg-8 mx-auto">
+      <p class="text-faded mb-5">This project was built for CS 506 at UW-Madison. We built this application to bring music to life! Lets get Started</p>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="RegisterPage">Sign Up</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="VisualizationPage"> Temp Visualizations Page Button </a>
+    </div>
+  </div>
+</header>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/creative.js"></script>
+</body>
 </html>
+
