--- a/music-visualizer/src/app/pages/Login-Page/login-page.component.css
+++ b/music-visualizer/src/app/pages/Login-Page/login-page.component.css
@@ -1,96 +1,153 @@
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import url('../../../assets/bootstrap/css/bootstrap.min.css');
 
-/*Reset elements, gets rid of css whitespace from html head*/
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
+#mainNav {
+  background-color: midnightblue !important;
 }
 
-/*Set the initial size of parent elements to retain
- *size of document for other elements
- */
-html, body {
-    margin: auto;
-    height: 100%;
-    background-color: teal;
+#mainNav .navbar-brand {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #f05f40;
 }
 
-/*Set the background color*/
-#background-out {
-    margin: 0;
-    height: 100vh;
-    background-color: teal;
+.login-dark {
+  height: 1000px;
+  background-size: cover;
+  position: relative;
+  background-color: midnightblue;
 }
 
-/*Set the color of the tile the login form is in*/
-#background-tile {
-    margin: auto;
-    width: 40%;
-    height: 100vh;
-    background-color: white;
+.login-dark form {
+  max-width: 350px;
+  width: 90%;
+  background-color: #57668a;
+  padding: 40px;
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  color: #fff;
+  box-shadow: 3px 3px 4px rgba(0,0,0,0.2);
 }
 
-/*title on page*/
-#login {
-    text-align: center;
-    padding-top: 10%;
-    margin-bottom: 20%;
+.login-dark .illustration {
+  text-align: center;
+  padding: 15px 0 20px;
+  font-size: 100px;
+  color: #2980ef;
 }
 
-/*center the form without centering the text*/
-#form {
-    font-family: "Arial, Helvetica, sans-serif";
-    font-size: large;
-    margin: auto;
-    width: 50%;
+.login-dark form .form-control {
+  background: none;
+  border: none;
+  border-bottom: 1px solid #434a52;
+  border-radius: 0;
+  box-shadow: none;
+  outline: none;
+  color: inherit;
 }
 
-/*add a little whitespace between forms*/
-#email, #pwd {
-    margin-bottom: 11%;
+.login-dark form input {
+  max-width: 300px;
+  width: 90%;
+  line-height: 30px;
 }
 
-mat-label {
-    margin-bottom: 2%;
+.login-dark form .btn-primary {
+  background: #226CE0;
+  border: none;
+  border-radius: 4px;
+  padding: 11px;
+  box-shadow: none;
+  margin-top: 26px;
+  text-shadow: none;
+  outline: none;
 }
 
-/*Set form input to be a black line*/
-input {
-    font-family: "Arial, Helvetica, sans-serif";
-    font-size: larger;
-    border: 0;
-    outline: 0;
-    border-bottom: 2px solid rgb(48, 48, 48);
-    width: 100%;
-    text-align: center;
+.login-dark form .btn-primary:hover, .login-dark form .btn-primary:active {
+  color: white;
+  background: #226CE0;
+  outline: none;
 }
 
-/*Align forgot password link to right and add trailing whitespace*/
-#forgot-password {
-    text-align: right;
-    margin-top: 3%;
+.login-dark form .forgot {
+  display: block;
+  text-align: center;
+  font-size: 12px;
+  color: #D0BCD5;
+  opacity: 0.9;
+  text-decoration: none;
 }
 
-/*Set button position and size and text size*/
-button {
-    color:white;
-    
-    margin: 10% -70px;
-    margin-bottom: 20%;
-    padding: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-
-    position:relative;
-    left:50%;
+.login-dark form .forgot:hover, .login-dark form .forgot:active {
+  color: white;
+  opacity: 1;
+  text-decoration: none;
 }
 
-/*Align register link to be centered*/
-#register {
-    text-align: center;
+.login-dark form .btn-primary:active {
+  transform: translateY(1px);
 }
+
+.login-dark form .btn-primary.disabled, .login-dark form .btn-primary:disabled {
+  color: black;
+  background-color: #D0BCD5;
+  border-color: black;
+}
+
+.login-dark form input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px #57668a inset !important;
+  -webkit-text-fill-color: white;
+}
+
+#mainNav {
+  border-bottom: 1px solid rgba(33,37,41,.1);
+  background-color: #fff;
+  transition: all .2s;
+}
+
+.fixed-bottom, .fixed-top {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
+.fixed-top {
+  top: 0;
+}
+
+@media (min-width:992px) {
+  .navbar-expand-lg {
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
+}
+
+.navbar, .navbar .container, .navbar .container-fluid, .navbar .container-lg, .navbar .container-md, .navbar .container-sm, .navbar .container-xl {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.navbar {
+  position: relative;
+  padding: .5rem 1rem;
+}
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+  display: block;
+}
+
+body {
+  font-family: Merriweather,Helvetica Neue,Arial,sans-serif;
+}
+
