--- a/music-visualizer/src/app/pages/Login-Page/login-page.component.html
+++ b/music-visualizer/src/app/pages/Login-Page/login-page.component.html
@@ -1,33 +1,49 @@
-<div id="background-out">
-    <div id="background-tile">
-        <section class="mat-typography">
-            <h1 class="mat-display-4" id="login">Login</h1><br>
-        </section>
 
-        <div id="form">
-            <form>
-                <div id="email">
-                    <mat-label for="email">Email</mat-label>
-                    <mat-error *ngIf="email.invalid">*</mat-error><br>
-                    <input matInput name="email" class="pwd" [formControl]="email" placeholder="Enter your email" required><br>
-                    <mat-error *ngIf="email.invalid">{{getEmailMessage()}}</mat-error><br>
-                </div>
-                <div id="pwd">
-                    <mat-label for="pwd">Password</mat-label>
-                    <mat-error *ngIf="pwd.invalid">*</mat-error><br>
-                    <input matInput type="password" class="pwd" name="pwd" [formControl]="pwd" placeholder="Enter your password"><br>
-                    <a routerLink="../ForgotPasswordPage">
-                        <p class="mat-body" id="forgot-password">Forgot Password?</p>
-                    </a>
-                    <mat-error *ngIf="pwd.invalid">{{getPasswordMessage()}}</mat-error><br>
-                </div>
-            </form>
-        </div>
-        <div>
-            <button mat-raised-button color="primary" [disabled]="email.invalid || pwd.invalid" (click)="login()">LOGIN</button>
-        </div>
-        <div id="register">
-            <p class="mat-body">Don't have an account? <a routerLink="../RegisterPage">Register here.</a></p>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>login page</title>
+  <link rel="stylesheet" href="login-page.component.css">
+</head>
+
+<body>
+
+<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+  <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="../">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+    <div class="collapse navbar-collapse" id="navbarResponsive"></div>
+  </div>
+</nav>
+
+<section class="login-dark">
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <h1 class="text-center text-white">Login</h1>
+    <div class="form-group">
+      <label for="email"></label>
+      <mat-error *ngIf="this.loginForm.get('email')?.invalid && (this.loginForm.get('email')?.dirty || this.loginForm.get('email')?.touched)">*</mat-error> <br>
+      <input class="form-control" type="email" id="email" name="email" formControlName="email" placeholder="Email" required><br>
+      <mat-error *ngIf="this.loginForm.get('email')?.invalid && (this.loginForm.get('email')?.dirty || this.loginForm.get('email')?.touched)">{{getEmailMessage()}}</mat-error> <br>
     </div>
-</div>
+    <div class="form-group">
+      <label for="pwd"></label>
+      <mat-error *ngIf="this.loginForm.get('password')?.invalid && (this.loginForm.get('password')?.dirty || this.loginForm.get('password')?.touched)">*</mat-error><br>
+      <input class="form-control" formControlName="password" type="password" id="pwd" name="pwd" placeholder="Password"><br>
+      <mat-error *ngIf="this.loginForm.get('password')?.invalid && (this.loginForm.get('password')?.dirty || this.loginForm.get('password')?.touched)">{{getPasswordMessage()}}</mat-error><br>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary btn-block" type="submit" [disabled]="this.loginForm.get('email')?.invalid || this.loginForm?.get('password')?.invalid">Log In</button>
+    </div>
+    <a class="forgot" routerLink="../ForgotPasswordPage">Forgot your password?</a>
+    <a class="forgot" routerLink="../RegisterPage">Dont have an Account? Register here.</a>
+  </form>
+</section>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/creative.js"></script>
+</body>
+
+</html>
