--- a/music-visualizer/src/app/pages/Not-Found-Page/not-found-page.component.html
+++ b/music-visualizer/src/app/pages/Not-Found-Page/not-found-page.component.html
@@ -1,7 +1,30 @@
-<div id="animated-gif-container">
-    <div id="back-box">
-        <h1>404</h1>
-        <p>Uh oh. We can't seem to find the page your looking for.</p>
-        <p><a routerLink={{getRoute()}}>Click here</a> to head back to the {{getRouteName()}}.</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Music Visualizer</title>
+    <link rel="stylesheet" href="not-found-page.component.css">
+</head>
+
+<body><section class="login-dark" style="padding: 10px 0px;background: url('https://media.giphy.com/media/ifdPjn6m4WyNlnXMTj/giphy.gif');background-size: cover;">
+    <header></header>
+    <div style="background: rgba(0,0,0,0.6);height: 288px;width: 60%;color: var(--blue);margin-left: 20%;margin-top: 241px;opacity: 1;padding: 19px;">
+        <h1 style="text-align: center;color: rgb(255,255,255,1);font-size: 145px;margin-bottom: -20px;"><strong>404</strong></h1>
+        <p style="text-align: center;color: rgb(255,255,255,1);margin-top: 15px;">Uh oh. We can&#39;t seem to find the page your searching for. Click the above link to head back to the homepage.</p>
     </div>
-</div>
+</section>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: #f05f40;">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive"></div>
+        </div>
+    </nav>
+    <script src="../../../assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="../../../assets/js/creative.js"></script>
+</body>
+
+</html>
