--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -5,5 +5,8 @@
 </header>
 <body>
   Call a Three Js script here
+  <p>For a bad link <a routerLink="badLink">click here!</a></p>
+  <p>To go back to the home page <a routerLink="../">click here!</a></p>
+  <p>To logout <a href (click)="logout()">click here!</a></p>
 </body>
 </html>
