Added Angular Notifier Service and styled Forgot Password Page

--- a/music-visualizer/src/app/pages/Forgot-Password-Page/forgot-password-page.component.html
+++ b/music-visualizer/src/app/pages/Forgot-Password-Page/forgot-password-page.component.html
@@ -1,19 +1,44 @@
 
-<html>
-  <HEADER>
-    <H1>
-      Forgot Password?
-    </H1>
-  </HEADER>
-  <body>
-    <div>
-      <form [formGroup]="emailForm" (ngSubmit)="onSubmit()">
-        <label for="email">Email:</label><br>
-        <input formControlName="email" type="email" id="email" name="email" placeholder="Enter your email" ><br>
-        <button mat-raised-button color = "accent" type="submit" [disabled]="emailForm.invalid"> Request Email to Reset Password </button>
-      </form>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>forgot password page</title>
+  <link rel="stylesheet" href="forgot-password-page.component.css">
+</head>
+
+<body>
+
+<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+  <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="../">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+    <div class="collapse navbar-collapse" id="navbarResponsive"></div>
+  </div>
+</nav>
+
+<section class="login-dark">
+<!--  <div *ngIf="this.successRequest"  class="alert alert-success" role="alert"><span><strong>Alert</strong> text.</span></div>-->
+  <form [formGroup]="emailForm" (ngSubmit)="onSubmit()">
+    <h1 class="text-center text-white">Forgot Password?</h1>
+    <div class="form-group">
+      <label for="email"></label>
+      <mat-error *ngIf="this.emailForm.get('email')?.invalid && (this.emailForm.get('email')?.dirty || this.emailForm.get('email')?.touched)">*</mat-error> <br>
+      <input class="form-control" type="email" id="email" name="email" formControlName="email" placeholder="Email" required><br>
+      <mat-error *ngIf="this.emailForm.get('email')?.invalid && (this.emailForm.get('email')?.dirty || this.emailForm.get('email')?.touched)">{{getEmailMessage()}}</mat-error> <br>
     </div>
+    <div class="form-group">
+      <button class="btn btn-primary btn-block" type="submit" [disabled]="this.emailForm.get('email')?.invalid">Request Reset Email</button>
+    </div>
+    <a class="forgot" routerLink="../LoginPage">Already have an Account? Login here.</a>
+    <a class="forgot" routerLink="../RegisterPage">Dont have an Account? Register here.</a>
+  </form>
+</section>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/creative.js"></script>
+</body>
 
-  </body>
 </html>
