--- a/music-visualizer/src/app/pages/Introduction-Page/Introduction-page.component.html
+++ b/music-visualizer/src/app/pages/Introduction-Page/Introduction-page.component.html
@@ -47,10 +47,10 @@
       </div>
     </div>
     <div class="col-lg-8 mx-auto">
-      <p class="text-faded mb-1">
+      <p class="text-faded mb-1" style="margin: 0 0 100px 0">
         Before we get started, here is some basic information about the Music Visualizer!
       </p>
-      <h1 class="glow">WARNING</h1>
+      <h1 class="glow" style="margin: 0 0 20px 0">WARNING</h1>
       <p class="text-faded mb-5">
         This application is prone to causing seizures due to fast moving visuals and changing colors. If you are epileptic, please be mindful.
       </p>
