--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Home - The Music Visualizer</title>
+  <title>Profile Page</title>
 </head>
 
 <body id="page-top">
@@ -29,9 +29,6 @@
     </div>
     <div class="col-lg-8 mx-auto">
       <p class="text-faded mb-5">This project was built for CS 506 at UW-Madison. We built this application to bring music to life! Lets get Started</p>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="RegisterPage">Sign Up</a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="VisualizationPage"> Temp Visualizations Page Button </a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="ProfilePage"> Temp Profile Page Button </a>
     </div>
   </div>
 </header>
