--- a/music-visualizer/src/app/pages/About-Page/about-page.component.html
+++ b/music-visualizer/src/app/pages/About-Page/about-page.component.html
@@ -5,27 +5,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Introduction</title>
+  <title>About Us - The Music Visualizer</title>
 </head>
-
-<style>
-  .glow {
-    font-size: 80px;
-    color: #fff;
-    text-align: center;
-    animation: glow 1s ease-in-out infinite alternate;
-  }
-  
-  @keyframes glow {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 60px #ff0000, 0 0 70px #ff0000;
-    }
-    
-    to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #dc143c, 0 0 40px #dc143c, 0 0 50px #dc143c, 0 0 60px #dc143c, 0 0 70px #dc143c, 0 0 80px #dc143c;
-    }
-  }
-  </style>
 
 <body id="page-top">
 <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
@@ -36,19 +17,12 @@
   <div class="container my-auto">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <h1 class="text-uppercase"><strong>Introduction</strong></h1>
+        <h1 class="text-uppercase"><strong>About Us</strong></h1>
         <hr />
       </div>
     </div>
     <div class="col-lg-8 mx-auto">
-      <p class="text-faded mb-1" style="margin: 0 0 100px 0">
-        Before we get started, here is some basic information about the Music Visualizer!
-      </p>
-      <h1 class="glow" style="margin: 0 0 20px 0">WARNING</h1>
-      <p class="text-faded mb-5">
-        This application is prone to causing seizures due to fast moving visuals and changing colors. If you are epileptic, please be mindful.
-      </p>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="../VisualizationPage"> Continue to visualizations page </a>
+      <p class="text-faded mb-5" style="white-space: pre-line;">{{readme}}</p>
     </div>
   </div>
 </header>
