--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -14,7 +14,6 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link js-scroll-trigger">About Us</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" routerLink="LoginPage">Login</a></li>
       </ul>
     </div>
   </div>
@@ -23,7 +22,7 @@
   <div class="container my-auto">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <h1 class="text-uppercase"><strong>Welcome to the Music Visualizer</strong></h1>
+        <h1 class="text-uppercase"><strong>Profile Page</strong></h1>
         <hr />
       </div>
     </div>
