--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -36,6 +36,13 @@
       <option value="2" label="max">
     </datalist>
     <label for="volume_button">VOL</label>
+
+    <input type="range" id="panner" class="control-panner" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner" />
+			<datalist id="pan-vals">
+				<option value="-1" label="left">
+				<option value="1" label="right">
+			</datalist>
+			<label for="panner">PAN</label>
   </div>
 </body>
 </html>
