add next button

--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -22,7 +22,7 @@
     <button (click)="this.audioService.play()" id="play_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
       <span>Play/Pause</span>
     </button>
-    <button (click)="this.audioService.play()" id="next_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
+    <button (click)="nextSong()" id="next_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
       <span>Next</span>
     </button>
     <button (click)="this.audioService.play()" id="rewind_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
