--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -7,7 +7,6 @@
   <p>For a bad link <a routerLink="badLink">click here!</a></p>
   <p>To go back to the home page <a routerLink="../">click here!</a></p>
   <p>To logout <a href (click)="logout()">click here!</a></p>
-  <button (click)="switchSong()">Switch</button><br>
 
   <label for="uploadFile">Choose a .mp3 file to upload:</label>
   <br>
@@ -19,13 +18,13 @@
 <!--  <audio id= "audio_file" src="../../../songs/RickFlair.mp3" crossorigin="anonymous" ></audio>-->
   <div>
     <canvas #rendererCanvas id="renderCanvas"></canvas>
-    <button (click)="this.audioService.play()" id="play_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
+    <button (click)="playSong()" id="play_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
       <span>Play/Pause</span>
     </button>
     <button (click)="nextSong()" id="next_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
       <span>Next</span>
     </button>
-    <button (click)="this.audioService.play()" id="rewind_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
+    <button (click)="rewindSong()" id="rewind_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
       <span>Rewind</span>
     </button>
 
