--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -16,32 +16,34 @@
     <source id="audio_source" type="audio/mp3" >
   </audio>
 <!--  <audio id= "audio_file" src="../../../songs/RickFlair.mp3" crossorigin="anonymous" ></audio>-->
-  <div>
+  <div id="canvasButtons">
     <canvas #rendererCanvas id="renderCanvas"></canvas>
-    <button (click)="playOrPauseSong()" id="play_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
-      <span>Play/Pause</span>
-    </button>
-    <button (click)="nextSong()" id="next_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
-      <span>Next</span>
-    </button>
-    <button (click)="rewindSong()" id="rewind_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
-      <span>Rewind</span>
-    </button>
+    <div id="controls">
+      <button (click)="playOrPauseSong()" id="play_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
+        <span>Play/Pause</span>
+      </button>
+      <button (click)="nextSong()" id="next_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
+        <span>Next</span>
+      </button>
+      <button (click)="rewindSong()" id="rewind_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
+        <span>Rewind</span>
+      </button>
 
-<!--    //[(ngModel)]="this.audioService.gainNode.gain.value"-->
-    <input id= "volume_button" type="range" class="control-volume" min="0" max="2" value="1" list="gain-vals" step="0.01" data-action="volume" />
-    <datalist id="gain-vals">
-      <option value="0" label="min">
-      <option value="2" label="max">
-    </datalist>
-    <label for="volume_button">VOL</label>
+  <!--    //[(ngModel)]="this.audioService.gainNode.gain.value"-->
+      <input id= "volume_button" type="range" class="control-volume" min="0" max="2" value="1" list="gain-vals" step="0.01" data-action="volume" />
+      <datalist id="gain-vals">
+        <option value="0" label="min">
+        <option value="2" label="max">
+      </datalist>
+      <label for="volume_button">VOL</label>
 
-    <input type="range" id="panner" class="control-panner" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner" />
-			<datalist id="pan-vals">
-				<option value="-1" label="left">
-				<option value="1" label="right">
-			</datalist>
-			<label for="panner">PAN</label>
+      <input type="range" id="panner" class="control-panner" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner" />
+        <datalist id="pan-vals">
+          <option value="-1" label="left">
+          <option value="1" label="right">
+        </datalist>
+        <label for="panner">PAN</label>
+    </div>
   </div>
 </body>
 </html>
