--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -8,5 +8,6 @@
   <p>For a bad link <a routerLink="badLink">click here!</a></p>
   <p>To go back to the home page <a routerLink="../">click here!</a></p>
   <p>To logout <a href (click)="logout()">click here!</a></p>
+  <p><a routerLink="../ProfilePage"> Profile Page Button </a></p>
 </body>
 </html>
