Got cookies working finally

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -27,8 +27,11 @@
       </div>
     </div>
     <div class="col-lg-8 mx-auto">
-      <p class="text-faded mb-5">This project was built for CS 506 at UW-Madison. We built this application to bring music to life! Lets get Started</p>
+      <p class="text-faded mb-5">Page still in development as we add more fields to USER class</p>
     </div>
+    <h1 class="text-uppercase"><strong>Current Stored Data:</strong></h1>
+    <p> {{this.userData.name}} </p>
+    <p> {{this.userData.email}} </p>
   </div>
 </header>
 <script src="assets/js/jquery.min.js"></script>
