added a template scene service to use as the base for all future scences

--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -13,7 +13,7 @@
   <input type="file" id="uploadFile" name="uploadFile" (change)="upload($event.target)" accept=".mp3">
 
   <audio #audioFile id='audio_file' crossorigin="anonymous">
-    <source id="audio_source" type="audio/mp3" >
+    <source src="../../../assets/music/tripleT.mp3" id="audio_source" type="audio/mp3" >
   </audio>
 <!--  <audio id= "audio_file" src="../../../songs/RickFlair.mp3" crossorigin="anonymous" ></audio>-->
   <div id="canvasButtons">
