--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -1,4 +1,6 @@
 html {
+  height: 100%;
+  width: 100%;
   margin: 0;
 }
 
@@ -6,42 +8,41 @@ H1 {
   text-align: center;
 }
 
+*:focus {
+  outline:none
+}
+
 #canvasButtons {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
 }
 
 #renderCanvas {
-  position: relative;
-}
-
-#title {
-  color: white;
-  position: absolute;
-  text-align: center;
-  top: 3%;
   width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
 }
 
 #controls {
   color: white;
   position: absolute;
   margin: auto;
-  display: flexbox;
-  flex-direction: column;
-  left: 38%;
-  top: 80%;
+  width: 100%;
   align-items: center;
 }
 
 button {
-  padding: 15px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.4);
+  padding: 0px;
   display: inline-block;
   align-items: center;
-  margin: 10px;
+  outline: none;
+  color: white;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 i {
